# PROJECT_NVIDIA

./: .gitignore  Modelfile.qwen30b
.continue/mcpServers/: new-mcp-server.yaml
main_project/: .gitignore  CMakeLists.txt  CMakeLists.txt.qtds  LICENSE  QWEN.md  README.md  collect_env.sh  mainwindow.ui  package-lock.json  package.json  server.ts
main_project/qt6_frontend/: CMakeLists.txt  README.md
main_project/qt6_frontend/src/: benchmarksimulator.cpp  benchmarksimulator.h  main.cpp  mainwindow.cpp  mainwindow.h  sortingvisualizer.cpp  sortingvisualizer.h
main_project/resources/: resources.qrc
main_project/resources/styles/: darktheme.qss  lighttheme.qss
main_project/src/: App.tsx  CMakeLists.txt  index.css  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
main_project/src/charts/: benchmarkchartview.cpp  benchmarkchartview.h  comparisonbarchart.cpp  comparisonbarchart.h  scatterplotchart.cpp  scatterplotchart.h  timelinechart.cpp  timelinechart.h
main_project/src/core/: algorithmregistry.cpp  algorithmregistry.h  arraygenerator.cpp  arraygenerator.h  benchmarkresult.cpp  benchmarkresult.h  benchmarkrunner.cpp  benchmarkrunner.h  sortbenchengine.cpp  sortbenchengine.h  sortparams.h
main_project/src/cpu/: bubblesort.cpp  bubblesort.h  cpusorter.cpp  cpusorter.h  heapsort.cpp  heapsort.h  mergesort.cpp  mergesort.h  quicksort.cpp  quicksort.h  radixsort.cpp  radixsort.h  stdsort.cpp  stdsort.h
main_project/src/gpu/: bitonicsort.cu  bitonicsort.cuh  cudadeviceinfo.cu  cudadeviceinfo.cuh  cudadeviceinfo.h  cudadeviceinfo_stub.cpp  cudamemorymanager.cpp  cudamemorymanager.h  cudaquicksort.cu  cudaquicksort.cuh  cudasorter.cpp  cudasorter.cu  cudasorter.cuh  cudasorter.h  cudautils.cu  cudautils.cuh  thrustradixsort.cu  thrustradixsort.cuh
main_project/src/models/: algorithmsmodel.cpp  algorithmsmodel.h  resultstablemodel.cpp  resultstablemodel.h
main_project/src/sortbench_cpp/: CMakeLists.txt  benchmark_runner.cpp  benchmark_runner.h  cpu_algorithms.cpp  cpu_algorithms.h  gpu_algorithms.cu  gpu_algorithms.h  interactive_visualizer.cpp  interactive_visualizer.h  main.cpp  mainwindow.cpp  mainwindow.h  settings_dialog.cpp  settings_dialog.h  sorting_visualizer.cpp
main_project/src/ui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  chartwidget.cpp  chartwidget.h  controlpanel.cpp  controlpanel.cpp.backup  controlpanel.h  mainwindow.ui  progresspanel.cpp  progresspanel.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  statspanel.cpp  statspanel.h  visualizationwidget.cpp  visualizationwidget.h
main_project/src/utils/: csvexporter.cpp  csvexporter.h  logger.cpp  logger.h  settingsmanager.cpp  settingsmanager.h  threadpool.cpp  threadpool.h
main_project/src/visualization/: animationcontroller.cpp  animationcontroller.h  baranimation.cpp  baranimation.h  colorscheme.cpp  colorscheme.h  sortvisualizer.cpp  sortvisualizer.h
sortbench_-cuda-vs-cpu/: README.md  metadata.json
sortbench_-cuda-vs-cpu/src/: App.tsx
sortbench_-cuda-vs-cpu/src/sortbench_cpp/: benchmark_runner.cpp  benchmark_runner.h  cpu_algorithms.cpp  cpu_algorithms.h  gpu_algorithms.cu  main.cpp  mainwindow.cpp  mainwindow.h  sorting_visualizer.cpp  sorting_visualizer.h
пробники/: bench_heavy  benchmark  benchmark.cu  benchmark_heavy.cu  cuda_benchmark  cuda_benchmark.cu  test  test.cu
